# CPP-Argument-Parser

./: .gitignore  .travis.yml  CMakeLists.txt  CPP_Argument_Parser.cbp  LICENSE  Makefile  README.md  _config.yml  argParser_Test  argParser_Test[1]_include.cmake  argParser_Test[1]_tests.cmake  conf  exampleConfigfile  exampleMain.cpp  exampleMainExtended.cpp  exampleMainSimple.cpp  extendedExmple  generatedMD.md  main.cpp
include/: argvParser.h
src/: argParserAdvancedConfiguration.cpp  argParserAdvancedConfiguration.h  argvParser.cpp  argvParser.h  configFileReader.cpp  configFileReader.h  configfileReader.cpp  configfileReader.h
tests/: advancedConfigurationTest.cpp  argvParserTest.cpp  config1  config2  config3  config4  configReaderTest.cpp  defaultConfigFileTest.cpp  definedNumberOfArgs.cpp  exampleTest.cpp  gTestInit.cpp  lambdaTest.cpp
tests/configFiles/: config1.txt  config2  config2.txt  config5  config7  config8.txt  config9.txt  defaultConf
tests/configFiles/subFolder/: defaultConf
tests/gtest/: gtest-all.cc  gtest.h
tmp/: Makefile  argParser_Test  argParser_Test[1]_include.cmake  argParser_Test[1]_tests.cmake
